[[release-notes-5.9.1]]
== 5.9.1

*Date of Release:* ❓

*Scope:* Minor bug fixes since 5.9.0

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/63?closed=1+[5.9.1] milestone page in the JUnit repository
on GitHub.


[[release-notes-5.9.1-junit-platform]]
=== JUnit Platform

==== Bug Fixes

* `ReflectionSupport.findMethods(...)` now returns a distinct set of methods.

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.9.1-junit-jupiter]]
=== JUnit Jupiter

==== Bug Fixes

* A `@ParameterizedTest` method configured with a `@MethodSource` annotation that
  references a factory method inherited from multiple interfaces no longer fails with an
  exception stating that multiple factory methods with the same name were found.

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓


[[release-notes-5.9.1-junit-vintage]]
=== JUnit Vintage

==== Bug Fixes

* ❓

==== Deprecations and Breaking Changes

* ❓

==== New Features and Improvements

* ❓